feat(booking): implement update endpoint
